--- a/css/design.css
+++ b/css/design.css
@@ -11,10 +11,6 @@ h1, h2, h3, h4, h5, h6 {
 .media-body {
     color: grey !important;
 }
-.table td, .table th {
-    padding: 5px;
-    font-size: 14px;
-}
 .nav-link, .nav-link:hover, .nav-link:active, .nav-link:visited{
     color: grey;
     text-decoration: none;
@@ -39,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     border: 1px solid white;
     cursor: pointer;
 }
-.btn-outline-red, .btn-outline-purple, .btn-outline-loc, .btn-subc, .btn-purple, .btn-outline-white, .btn-outline-blue{
+.btn-outline-red, .btn-outline-purple, .btn-outline-loc, .btn-subc, .btn-purple, .btn-outline-white, .btn-outline-blue, .btn-outline-blue-sm{
     -webkit-appearance: none !important;
     background-color: transparent;
     border-radius: 25px;
@@ -88,14 +84,88 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1rem;
     box-shadow: none;
 }
-.btn-outline-blue {
+.btn-outline-blue, .btn-outline-blue-sm{
     border: 2px solid #2068a6;
     color: #2068a6;
     font-size: 1.25rem;
 }
+.btn-outline-blue-sm{
+    font-size: 1rem;
+}
 
-
-/*Styling for Body Section of Home page */
+/*Styling for Body Section of Home page*/
+.landing {
+    position: relative;
+    height: 100vh;
+}
+div.scroll-btn{
+    position: absolute;
+    bottom: 40%;
+    left: 50%;
+    width: 30px;
+    height: 45px;
+    margin-left: -15px;
+    background: #a890ba;
+    border: 2px solid #a890ba;
+    border-radius: 50px;
+    box-sizing: border-box;
+}
+div.scroll-btn a {
+    padding-top: 70px;
+}
+div.scroll-btn a::before {
+    position: absolute;
+    top: 20%;
+    left: 53%;
+    content: '';
+    width: 5px;
+    height: 5px;
+    margin-left: -3px;
+    background-color: white;
+    border-radius: 50%;
+    box-sizing: border-box;
+}
+div.scroll-btn a span {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    margin-left: -8px;
+    border-left: 2px solid #a890ba;
+    border-bottom: 2px solid #a890ba;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb05 1.5s infinite;
+    animation: sdb05 1.5s infinite;
+    box-sizing: border-box;
+}
+@-webkit-keyframes sdb05 {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+@keyframes sdb05 {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
 .customer-intro {
     position: absolute;
     top: -60px;
@@ -165,13 +235,14 @@ h1, h2, h3, h4, h5, h6 {
 .vids-bg .owl-theme .owl-dots .owl-dot span {
     width: 15px;
     height: 15px;
+    background: #bab9b9;
 }
 .vids-bg .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    background: #bfd3ec;
+    background: #2069a6;
 }
 .invest-bg{
-    background: url("../images/pigy.jpg") no-repeat center;
-    background-size: 100% 100%;
+    background: url("../images/piggy.jpg") no-repeat center;
+    background-size: cover;
     height:400px;
     color: white;
 }
@@ -215,13 +286,13 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     height: 380px;
     background-color: #a890ba;
-    box-shadow: 5px -5px 8px -4px rgba(183, 183, 183, 1), -5px -5px 8px -4px rgba(183, 183, 183, 1);
+    box-shadow: 9px 0 17px -7px rgba(70, 74, 76, 0.32), -6px 0 23px -4px rgba(41, 43, 44, 0.37);
 }
 .culture-pic{
     position: absolute;
     width: 45%;
     top: -30%;
-    box-shadow: 5px -5px 8px -4px rgba(183, 183, 183, 1), -5px -5px 8px -4px rgba(183, 183, 183, 1);
+    box-shadow: 9px 0 17px -7px rgba(70, 74, 76, 0.32), -6px 0 23px -4px rgba(41, 43, 44, 0.37);
 }
 .culture img{
     object-fit: contain;
@@ -229,7 +300,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .culture-txt{
     margin-top: 5%;
-    margin-right: 2%;
+    margin-right: 3%;
     padding: 10px;
     width: 50%;
     color: white;
@@ -242,13 +313,13 @@ h1, h2, h3, h4, h5, h6 {
     border-top-right-radius: 40px;
     height: 400px;
     background: linear-gradient(to bottom, #2068a6 0%, #a5a8d9 100%);
-    box-shadow: 5px -5px 8px -4px rgba(183, 183, 183, 1), -5px -5px 8px -4px rgba(183, 183, 183, 1);
+    box-shadow: 0 -3px 9px -2px #464a4c, -5px -5px 8px -4px rgba(70, 74, 76, 0.15);
 }
 .s8-pic{
     position: absolute;
     width: 18%;
     top: -20%;
-    right: 10%;
+    right: 7%;
 }
 .s8-pic img{
     object-fit: contain;
@@ -256,8 +327,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 .s8-txt{
     margin-top: 10%;
-    margin-left: 3%;
-    width: 65%;
+    margin-left: 7%;
+    width: 63%;
     color: white;
     font-size: 1.25rem;
     font-weight: 200;
@@ -265,9 +336,7 @@ h1, h2, h3, h4, h5, h6 {
 .reg{
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
-    box-shadow: 5px 0 8px -4px rgba(183, 183, 183, 1), -5px 0 8px -4px rgba(183, 183, 183, 1);
+    box-shadow: 9px 0 17px -7px rgba(70, 74, 76, 0.32), -6px 0 23px -4px rgba(41, 43, 44, 0.37);
     padding: 0;
 }
 .reg-pic{
@@ -287,13 +356,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 .reg-txt p{
     margin-top: 8%;
-    width: 70%;
+    width: 68%;
 }
 .reg-btn {
     position: absolute;
     top: 50%;
     right: 0;
-    width: 30%;
+    width: 32%;
 }
 
 /*Styling for Body Section of Product & Services page*/
@@ -509,13 +578,30 @@ footer table{
     font-size: 0.85rem;
 }
 .signature{
-    font-size: 0.85rem;
+    font-size: 0.75rem;
     color: #525775;
     font-weight: 500;
 }
 .app img{
     object-fit: contain;
     width: 65%;
+}
+
+/*Styling from Integration*/
+#slider, #slider .carousel-item {
+    height: 75vh;
+    padding: 0;
+    overflow: hidden;
+}
+#slider img{
+    object-fit: cover;
+    width: 100%;
+}
+#slider-icon{
+    padding: 0;
+    height: 15vh;
+    margin-top: 5vh;
+    overflow: hidden;
 }
 
 /* Media Queries */
@@ -565,12 +651,39 @@ footer table{
     }
 }
 
+@media(max-width: 1024px) and (max-height: 768px ){
+    .landing {
+        height: auto;
+        margin-bottom: 35px;
+    }
+    #slider, #slider .carousel-item{
+        height: 65vh;
+    }
+    nav.style3 {
+        top: 57vh;
+    }
+    #slider-icon {
+        height: 12vh;
+        overflow: visible;
+    }
+    div.scroll-btn {
+        bottom: 30%;
+    }
+}
+
 @media (max-width: 991px) {
 
     /*Styling Body of Home page*/
+    .landing {
+        height: auto;
+        margin-bottom: 35px;
+    }
+    #slider{
+        margin-top: 83px;
+    }
     .customer-intro {
         width: 41.6667%;
-        margin-left: 0;
+        margin-left: 1%;
         font-weight: 500;
         font-size: 1.25rem;
         padding: 20px 10px;
@@ -582,8 +695,11 @@ footer table{
     #customer-slide {
         top: -45%;
     }
+    .vids-txt {
+        margin: 15% 10px 0 10px;
+    }
     .invest-bg{
-        height: 300px;
+        height: 330px;
     }
     .invest-txt {
         width: 50%;
@@ -594,13 +710,19 @@ footer table{
         font-size: 1.25rem;
         margin-top: 5%;
     }
+    .benefit-txt{
+        font-size: 0.85rem;
+    }
+    .benefit-txt h5 {
+        margin-top: 10%;
+    }
     .culture {
         height: 240px;
     }
     .culture-pic {
         position: absolute;
         width: 45%;
-        top: -45%;
+        top: -40%;
     }
     .culture-txt {
         font-size: 0.85rem;
@@ -610,7 +732,7 @@ footer table{
     .call-s8{
         border-top-left-radius: 0;
         border-top-right-radius: 0;
-        height: 200px;
+        height: 220px;
     }
     .s8-txt{
         margin-top: 5%;
@@ -623,9 +745,6 @@ footer table{
         width: 15%;
         top: -20%;
         right: 5%;
-    }
-    .benefit-txt{
-        font-size: 0.85rem;
     }
     .reg{
         border: none;
@@ -674,7 +793,7 @@ footer table{
 
     /*Styling Button*/
     .btn-outline-white, .btn-outline-white:hover, .btn-outline-white:active, .btn-outline-white:focus, .btn-outline-red,
-    .btn-outline-purple, .btn-outline-loc, .btn-subc, .btn-purple, .btn-outline-blue {
+    .btn-outline-purple, .btn-outline-loc, .btn-subc, .btn-purple, .btn-outline-blue, .btn-outline-blue-sm {
         font-size: 0.85rem;
     }
 
@@ -718,6 +837,12 @@ footer table{
         background-color: #e1e1e1;
         border: none;
     }
+    .vids-txt {
+        margin: 15% 25px 0 25px;
+    }
+    .invest-bg {
+        background-size: cover;
+    }
     .benefit-txt h5 {
         margin-top: 5%;
     }
@@ -727,7 +852,7 @@ footer table{
     }
     .culture{
         height: inherit;
-        padding: 20px;
+        padding: 50px;
     }
     .culture-txt{
         font-size: 1rem;
@@ -747,7 +872,16 @@ footer table{
         font-weight: 500;
     }
     .reg-txt p {
-        margin-top: 5%;
+        margin-top: 10%;
+        width: 100%;
+    }
+    .call-s8{
+        height: auto;
+    }
+    .s8-txt{
+        margin: 0;
+        padding: 50px 25px;
+        height: auto;
         width: 100%;
     }
 
@@ -767,7 +901,7 @@ footer table{
 
     /*Styling for Button*/
     .btn-outline-blue {
-        margin-bottom: 3%;
+        margin-bottom: 5%;
     }
 }
 
@@ -776,10 +910,11 @@ footer table{
     /*Styling for Home page*/
     .customer-intro {
         top: -59px;
-        width: 95%;
-        margin-left: 2.5%;
+        width: 100%;
+        margin-left: 0;
         font-weight: 500;
         font-size: 1.25rem;
+        box-shadow: -1px -1px 6px rgba(70, 74, 76, 0.332);
     }
     .customer-txt{
         height: initial;
@@ -795,6 +930,9 @@ footer table{
     .card-block {
         padding: 1.25rem 0;
     }
+    .invest-bg{
+        background: url("../images/m-piggy.jpg") no-repeat center;
+    }
     .invest-txt{
         width: 100%;
         font-size: 1.25rem;
@@ -804,13 +942,16 @@ footer table{
     }
     .benefit-txt {
         font-size: 1rem;
-        padding: 25px;
+        padding: 50px 25px;
     }
     .benefit-txt h5 {
         margin-top: 0;
     }
     .benefit-txt p {
         padding: 0;
+    }
+    .culture{
+        padding: 50px 25px;
     }
     .reg {
         background-size: 100% 100%;
@@ -855,15 +996,17 @@ footer table{
 
     /*Styling for buttons*/
     .btn-red, .btn-red:hover, .btn-red:active, .btn-purple, .btn-outline-red, .btn-outline-purple, .btn-outline-loc,
-    .btn-subc, .btn-outline-white, .btn-outline-blue, .btn-outline-purple:hover, .btn-outline-purple:active,
+    .btn-subc, .btn-outline-white, .btn-outline-blue, .btn-outline-blue-sm, .btn-outline-purple:hover, .btn-outline-purple:active,
     .btn-outline-loc:focus , .btn-outline-loc, .btn-outline-purple {
         font-size: 0.85rem;
     }
-    .btn-outline-blue {
+    .btn-outline-blue, .btn-outline-blue-sm {
+        margin-bottom: 5%;
+    }
+    .btn-outline-blue{
         background-color: #2068a6;
         color: white;
         font-weight: 500;
-        margin-bottom: 5%;
     }
 
 }
