--- a/css/design.css
+++ b/css/design.css
@@ -354,7 +354,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     background: linear-gradient(to bottom, #2068a6 0%, #a5a8d9 100%);
-    box-shadow: 0 -3px 9px -2px  rgba(70, 74, 76, 0.32), -5px -5px 8px -4px rgba(70, 74, 76, 0.32);
+    box-shadow: 0 -3px 9px -2px #464a4c, -5px -5px 8px -4px rgba(70, 74, 76, 0.15);
 }
 #s8-pic{
     position: absolute;
