--- a/css/docs.css
+++ b/css/docs.css
@@ -84,6 +84,16 @@ border:1px solid red !important;
 #mc_embed_signup .mc-field-group{
     width: 100% !important;
 }
+
+#mc_embed_signup{
+    background: transparent !important;
+}
+
+
+.ctips-button{
+margin-top: 10px !important;
+}
+
 #enroll-cont{
 padding-bottom: 120px;
 margin-bottom: 51px;
@@ -677,7 +687,7 @@ input[type="text"].language::-webkit-input-placeholder {
     padding: 10px 3% 10px 3% !important;
 }
 
-#mc-embedded-subscribe{
+.news-button {
     margin: 0px !important;
 }
 
