--- a/css/design.css
+++ b/css/design.css
@@ -111,6 +111,10 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     padding: 5px 10px;
     margin-top: 10px;
 }
+.btn-primary {
+    background-color: #2068a6;
+    border-radius: 25px;
+}
 
 /*Styling for Body Section of Home page*/
 .landing {
@@ -756,11 +760,24 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 #vac #accordion5 h6 {
     color: #a990ba;
 }
-#alm, #cbs, #csr, #f-rep {
+#alm, #cbs, #csr {
     height: 500px;
-
 }
-#alm > h1, #cbs > h1, #csr > h1, #f-rep > h1 {
+#f-rep{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+#f-rep h2, #f-rep ul li a, #f-rep ul li .fa-chevron-right::before {
+    color: #4b78af;
+}
+#f-rep ul li {
+    border-bottom: 2px solid #4b78af;
+    padding: 5px;
+}
+#f-rep img {
+    width: 250px;
+}
+#alm > h1, #cbs > h1, #csr > h1 {
     color: #4b78af;
     margin-top: 206px;
 }
@@ -847,7 +864,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 #cv label{
     margin-bottom: 0;
 }
-#cv input, #sign input, #feed input, .sub-box input, .comp-prof input, #calc-page input{
+#cv input, #sign input, #feed input, .sub-box input, .comp-prof input, #calc-page input, #login-page input{
     background: #ebebeb;
     height: 30px;
     border: none;
@@ -864,7 +881,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     padding: .25rem .75rem;
 }
 #cv input:focus, #sign input:focus, #feed input:focus, #feed textarea:focus, #cv textarea:focus, #cv select:focus, .sub-box input:focus,
-.comp-prof input:focus, #calc-page input:focus{
+.comp-prof input:focus, #calc-page input:focus, #login-page input:focus{
     background-color: #ebebeb;
     box-shadow: 0 0 5px #333;
     padding: .25rem .75rem;
@@ -940,11 +957,13 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     padding-left:  5%;
     padding-right: 5%;
 }
-.invest-rep-txt > p {
+.invest-rep-txt > p, #f-rep p {
     font-size: 1.25rem;
+}
+.invest-rep-txt > p {
     font-weight: 300;
 }
-.invest-rep-txt > ul, #downld ul{
+.invest-rep-txt > ul, #downld ul, #f-rep ul{
     list-style-type: none;
     padding: 0;
 }
@@ -952,13 +971,12 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     border-bottom: 2px solid white;
     padding: 5px;
 }
-.invest-rep-txt > ul > li > .fa-chevron-right::before {
+.invest-rep-txt > ul > li > .fa-chevron-right::before, #f-rep ul li .fa-chevron-right::before {
     position: relative;
     font-size: 12px;
-    color: white;
     top: -2px;
 }
-.invest-rep-txt > ul > li > a {
+.invest-rep-txt > ul > li > a, .invest-rep-txt > ul > li > .fa-chevron-right::before {
     color: white;
     font-weight: 300;
 }
@@ -992,7 +1010,7 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
     height: 60px;
     width: 60px;
 }
-#meet, #lead{
+#meet, #lead, #f-rep{
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
     -webkit-box-shadow:  10px 0 10px -10px rgba(41, 43, 44, 0.5), -10px 0 10px -10px rgba(41, 43, 44, 0.5), 0 10px 10px -10px rgba(41, 43, 44, 0.5);
@@ -1285,6 +1303,63 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 #accordion7 .card .card-header, #accordion8 .card .card-header, #accordion9 .card .card-header, #accordion10 .card .card-header {
     background: #e2e2e0;
     border-radius: 23px;
+}
+
+/*Styling for Body Section of Login Page*/
+#login-page {
+    margin-top: 50px;
+}
+.login-logo {
+    padding-top: 150px;
+    padding-bottom: 15px;
+}
+#login-page input{
+    width: 260px;
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
+#login-page .hanger{
+    width: 50%;
+    left: 25%;
+}
+#login-page .hanged{
+    width: 70%;
+    left: 15%;
+}
+#login-page .carousel-item img {
+    object-fit: cover;
+    width: 100%;
+}
+.login-links{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 0.875rem;
+}
+.login-links a{
+    color: #2068a6 !important;
+}
+.login-links a:first-child {
+    color: #9e9e9e !important;
+}
+.login-ad {
+    position: relative;
+    background-color: #60769c;
+    width: 60%;
+    left: 20%;
+    color: white;
+    font-size: 1.375rem;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    text-align: center;
+    padding: 10px 0;
+    margin-bottom: 1rem;
+    box-shadow: 0 0 10px #333;
+}
+#adButton {
+    position: absolute;
+    width: 100%;
+    bottom: 2rem;
+    display: none;
 }
 
 /*Styling for Footer Section*/
@@ -1796,12 +1871,23 @@ footer .table td, .table th {
     }
 
     /*Styling for Body of Calculator Page*/
-    #calc-page {
+    #calc-page, #login-page {
         margin-top: 83px;
     }
     #disclaim-overlay{
         top: 83px;
         padding-top: 35px;
+    }
+
+    /*Styling for Login Page*/
+    #login-page .hanged {
+        width: 90%;
+        left: 5%;
+    }
+    .login-ad {
+        width: 70%;
+        left: 15%;
+        font-size: 1.125rem;
     }
 
     /*Styling Button*/
@@ -2030,6 +2116,11 @@ footer .table td, .table th {
     .terms {
         padding-right: 15px;
         padding-left: 15px;
+    }
+
+    /*Styling for Login page*/
+    .login-logo {
+        padding-top: 50px;
     }
 
     /*Styling for Button*/
