--- a/css/docs.css
+++ b/css/docs.css
@@ -210,7 +210,7 @@ margin-bottom:50px;
     height:144px !important;
 }
 
-::-webkit-scrollbar{ 
+#confirm::-webkit-scrollbar{
     background-color: rgba(4, 6, 5, 0.3); 
 }
 
@@ -595,13 +595,11 @@ font-weight: 100;
 .float{
 float: left;
 }
-.tab-content{
+.social.tab-content{
     width:100%;
 }
-
 #feed{
 color:#1d69a6;
-top:40px;
 }
 .form-no{
     border-radius:50%;
