Updating google translator for home page

--- a/css/design.css
+++ b/css/design.css
@@ -117,16 +117,16 @@ footer .nav-link, footer .nav-link:hover, footer .nav-link:active, footer .nav-l
 }
 
 /*Styling for Google Translate*/
-.goog-te-combo {
-    background: transparent;
-    color: white;
-    border: none;
+.goog-te-combo, .goog-te-gadget-simple, .goog-te-gadget-simple .goog-te-menu-value {
+    background: transparent !important;
+    color: white !important;
+    border: none !important;
 }
 .goog-te-combo option{
     color: black;
 }
 
-    /*Styling for Body Section of Home page*/
+/*Styling for Body Section of Home page*/
 .landing {
     position: relative;
     height: 100vh;
